# hexagonal-architecture-boilerplate

./: .gitignore  migrate.py  pyproject.toml  run.py
app/: config.py  main.py
app/adapter/incoming/web/: article.py  root.py
app/adapter/incoming/web/schema/request/: article.py
app/adapter/incoming/web/schema/response/: article.py
app/adapter/outbound/repository/: article.py
app/dependency/: db.py
app/domain/entity/: __init__.py  article.py
app/domain/exception/error/: article.py  base.py
app/domain/exception/error_code/: article.py  base.py
app/domain/schema/: __init__.py  article.py
app/domain/service/article/: crud.py
app/port/incoming/usecase/article/: crud.py
app/port/outbound/repository/: article.py
