[tool.poetry]
name = "ddd-test-project"
version = "0.1.0"
description = ""
authors = ["youngjaekwon <gczzga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.0"}
sqlalchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
